@@ -1,4 +1,7 @@
 class FileLock
+  class LockUnavailableError < RuntimeError; end
+  class AlreadyLockedError < RuntimeError; end
+
   @@lock_files = {}
   
   def initialize(lock_file_name, locked_object_description = lock_file_name)
@@ -6,14 +9,20 @@ class FileLock
   end
   
   def lock
-    raise already_locked_error_message if @@lock_files.include?(@lock_file_name)
+    if @@lock_files.include?(@lock_file_name)
+      raise AlreadyLockedError, "Already holding a lock on #@locked_object_description"
+      
+    end
+    
     lock_file = File.open(@lock_file_name, 'w')
     locked = lock_file.flock(File::LOCK_EX | File::LOCK_NB)
     if locked
       @@lock_files[@lock_file_name] = lock_file
     else
       lock_file.close
-      raise cannot_lock_error_message
+      raise LockUnavailableError, 
+            "Another process holds a lock on #@locked_object_description.\n" + 
+            "Look for a process with a lock on file #@lock_file_name"
     end
   end
   
@@ -37,14 +46,5 @@ class FileLock
       File.delete(lock_file.path)
       @@lock_files.delete(@lock_file_name)
     end
-  end
-  
-  def cannot_lock_error_message
-    "Another process holds a lock on #@locked_object_description.\n" + 
-            "Look for a process with a lock on file #@lock_file_name"
-  end
-  
-  def already_locked_error_message
-    "Already holding a lock on #@locked_object_description"
   end
 end
